--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE SETTINGS
 title: Computer Security Lab @POSTECH                        # Title in top navigation bar (navbar) and <head>
-author: CSLab                    # Used for copyright statement in footer
+author: CompSecLab                    # Used for copyright statement in footer
 baseurl: ""                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
                                         # A baseurl affects internal links, see http://peterdesmet.github.io/petridish/markdown/#links
@@ -8,24 +8,24 @@ baseurl: ""                   # Only required if your site is in a directory e.g
 # SOCIAL PROFILES
 social:
   email: name@example.com
-  twitter: peterdesmet
+  # twitter: peterdesmet
   github: github_username               # Can also be a github_username/repository
-  mastodon: https://mastodon.social/@mastodon_username
-  facebook:                             # A URL
-  disqus: disqus_sitename               # Enable Disqus comments from disqus_sitename.disqus.com
+  # mastodon: https://mastodon.social/@mastodon_username
+  # facebook:                             # A URL
+  # disqus: disqus_sitename               # Enable Disqus comments from disqus_sitename.disqus.com
 
 # THEME SETTINGS (ALL OPTIONAL)
-posts_on_home: 3                        # Show x number of latest posts on homepage, can be 0
-tweets_on_home: true                    # Show Twitter feed of social.twitter on homepage
+posts_on_home: 0                        # Show x number of latest posts on homepage, can be 0
+tweets_on_home: false                    # Show Twitter feed of social.twitter on homepage
 archive_permalink: /blog/               # Permalink of page using the archive.html layout, required when using post tags
-github_edit: true                       # Show an "edit this page" link in the footer, can also be name of branch (default: main)
+github_edit: false                       # Show an "edit this page" link in the footer, can also be name of branch (default: main)
 colors:
   links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
   banner: "#007bff"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 font_serif: true                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
-logo: /assets/theme/images/petri-dish_1f9eb.png # Logo in navbar, will be displayed with 30px height
+logo: /assets/theme/images/compsec-logo.png # Logo in navbar, will be displayed with 30px height
 
 # BUILD SETTINGS
 markdown: kramdown
