--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE SETTINGS
-title: Computer Security Lab @POSTECH                        # Title in top navigation bar (navbar) and <head>
+title: CompSec Lab @POSTECH                        # Title in top navigation bar (navbar) and <head>
 author: CompSecLab                    # Used for copyright statement in footer
 baseurl: ""                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
@@ -21,7 +21,7 @@ archive_permalink: /blog/               # Permalink of page using the archive.ht
 github_edit: false                       # Show an "edit this page" link in the footer, can also be name of branch (default: main)
 colors:
   links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
-  banner: "#007bff"                     # Background color for page banners: use color that contrasts well with white
+  banner: "#222222"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 font_serif: true                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
