--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE SETTINGS
-title: CompSec Lab @POSTECH                        # Title in top navigation bar (navbar) and <head>
+title: CompSecLab                        # Title in top navigation bar (navbar) and <head>
 author: CompSecLab                    # Used for copyright statement in footer
 baseurl: ""                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
@@ -23,7 +23,7 @@ colors:
   links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
   banner: "#222222"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
-font_serif: true                        # Font type for page content: serif (default) or slightly smaller sans-serif
+font_serif: false                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
 logo: /assets/theme/images/compsec-logo.png # Logo in navbar, will be displayed with 30px height
 
