--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
   href: /publications/
 - text: Teaching
   href: /teaching/
+- text: About
+  href: /about/
 # - text: Blog
   # href: /blog/
 # - text: Documentation
