--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tweets_on_home: false                    # Show Twitter feed of social.twitter o
 archive_permalink: /blog/               # Permalink of page using the archive.html layout, required when using post tags
 github_edit: false                       # Show an "edit this page" link in the footer, can also be name of branch (default: main)
 colors:
-  links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
+  links: "#c61065"                      # Color for links: use a readable color that contrasts well with dark text
   banner: "#222222"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 font_serif: false                        # Font type for page content: serif (default) or slightly smaller sans-serif
