change banner color

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ archive_permalink: /blog/               # Permalink of page using the archive.ht
 github_edit: false                       # Show an "edit this page" link in the footer, can also be name of branch (default: main)
 colors:
   links: "#c61065"                      # Color for links: use a readable color that contrasts well with dark text
-  banner: "#222222"                     # Background color for page banners: use color that contrasts well with white
+  banner: "#f57e3a"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 font_serif: false                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
