--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -5,18 +5,18 @@
 columns:
   - description:
     links:
-    - text: Name of project partner 1
-      href: http://example.com
+    - text: Department of Computer Science and Engineering
+      href: https://cse.postech.ac.kr/
       new_window: true
-    - text: Prestigious and long name of project partner 2
-      href: http://example.com
+    - text: Pohang University of Science and Technology (POSTECH)
+      href: https://www.postech.ac.kr/
       new_window: true
 
-  - description: > # E.g. funding acknowledgement. Can be Markdown
-      This project is made with ❤ for open source.
-      See [`_data/footer.yml`](https://raw.githubusercontent.com/peterdesmet/petridish/master/_data/footer.yml)
-      to customize this text.
-    links:
+  # - description: > # E.g. funding acknowledgement. Can be Markdown
+      # This project is made with ❤ for open source.
+      # See [`_data/footer.yml`](https://raw.githubusercontent.com/peterdesmet/petridish/master/_data/footer.yml)
+      # to customize this text.
+    # links:
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
 # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
