--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: ""                   # Only required if your site is in a directory e.g
 social:
   email: name@example.com
   # twitter: peterdesmet
-  github: github_username               # Can also be a github_username/repository
+  github: postech-compsec               # Can also be a github_username/repository
   # mastodon: https://mastodon.social/@mastodon_username
   # facebook:                             # A URL
   # disqus: disqus_sitename               # Enable Disqus comments from disqus_sitename.disqus.com
