rm projects for now

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
   href: /
 - text: People
   href: /people/
-- text: Projects
-  href: /projects/
+# - text: Projects
+  # href: /projects/
 - text: Publications
   href: /publications/
 - text: Teaching
