open research tab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
   href: /publications/
 - text: Teaching
   href: /teaching/
-# - text: Research
-  # href: /research/
+- text: Research
+  href: /research/
 - text: About
   href: /about/
 # - text: blog
