--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ baseurl: ""                   # Only required if your site is in a directory e.g
                                         # A baseurl affects internal links, see http://peterdesmet.github.io/petridish/markdown/#links
 
 # SOCIAL PROFILES
-social:
-  email: seulbae@postech.ac.kr
+# social:
+  # email: seulbae@postech.ac.kr
   # twitter: peterdesmet
-  github: postech-compsec               # Can also be a github_username/repository
+  # github: postech-compsec               # Can also be a github_username/repository
   # mastodon: https://mastodon.social/@mastodon_username
   # facebook:                             # A URL
   # disqus: disqus_sitename               # Enable Disqus comments from disqus_sitename.disqus.com
