Update people.yml to add minjae

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -10,6 +10,11 @@ leaders:
   site: https://sangdon.github.io/
 
 # students:
+- name: Minjae Gwon
+  # role: M.S.
+  # image: assets/people/minjae.jpg
+  # site: https://bxta.kr/
+
 # - name: John Doe
   # role: Ph.D.
   # image: assets/people/john.jpg
