--- a/_data/people.yml
+++ b/_data/people.yml
@@ -11,9 +11,9 @@ leaders:
 
 # students:
 - name: Minjae Gwon
-  # role: M.S.
-  # image: assets/people/minjae.jpg
-  # site: https://bxta.kr/
+  role: M.S.
+  image: assets/people/minjae.jpg
+  site: https://bxta.kr/
 
 # - name: John Doe
   # role: Ph.D.
