--- a/_data/people.yml
+++ b/_data/people.yml
@@ -12,7 +12,7 @@ leaders:
 students:
 - name: Minjae Gwon
   role: M.S.
-  image: assets/people/minjae.jpg
+  image: assets/people/minjae.png
   site: https://bxta.kr/
 
 # - name: John Doe
