--- a/_data/people.yml
+++ b/_data/people.yml
@@ -17,7 +17,7 @@ students:
 
 - name: Namgyu Park
   role: M.S+Ph.D.
-  image: assets/people/namgyu.png
+  image: assets/people/namgyu.jpg
   site: #
 
 
