--- a/_data/people.yml
+++ b/_data/people.yml
@@ -43,7 +43,7 @@ interns:
 
 - name: Jeongwon Ha
   role: Visiting undergrad intern
-  image: assets/people/default.png
+  image: assets/people/jeongwon.png
   site: #
 
 - name: Minki Lee
