add minki's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -48,7 +48,7 @@ interns:
 
 - name: Minki Lee
   role: Visiting undergrad intern
-  image: assets/people/default.png
+  image: assets/people/minki.png
   site: #
 
 # - name: John Doe
