--- a/_data/people.yml
+++ b/_data/people.yml
@@ -49,7 +49,7 @@ interns:
 - name: Minki Lee
   role: Visiting undergrad intern
   image: assets/people/minki.png
-  site: #
+  site: https://github.com/leeminki02
 
 # - name: John Doe
   # role: Ph.D.
