--- a/_data/people.yml
+++ b/_data/people.yml
@@ -43,12 +43,12 @@ interns:
 
 - name: Jeongwon Ha
   role: Visiting undergrad intern
-  image: assets/people/jeongwon.png
+  image: assets/people/jeongwon.jpg
   site: #
 
 - name: Minki Lee
   role: Visiting undergrad intern
-  image: assets/people/minki.png
+  image: assets/people/minki.jpg
   site: https://github.com/leeminki02
 
 # - name: John Doe
