add selim's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -33,7 +33,7 @@ interns:
 
 - name: Selim Oh
   role: Undergrad intern
-  image: assets/people/default.png
+  image: assets/people/selim.jpg
   site: #
 
 - name: Youngseo Seo
