add taeyeon's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -62,7 +62,7 @@ Interns:
 - name: Taeyeon Kim
   role: Undergrad intern
   since: Fall 2024
-  image: assets/people/default.png
+  image: assets/people/taeyeon.jpg
   site: #
 
 Alumni:
