add a basic gallery

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
   href: /research/
 - text: Teaching
   href: /teaching/
+- text: Gallery
+  href: /gallery/
 - text: About
   href: /about/
 # - text: blog
