--- a/_data/people.yml
+++ b/_data/people.yml
@@ -65,6 +65,42 @@ Interns:
   image: assets/people/taeyeon.jpg
   site: #
 
+- name: Kyungmin Kim
+  role: Undergrad intern
+  since: Winter 2025
+  image: assets/people/default.png
+  site: #
+
+- name: Dongwan Roh
+  role: Undergrad intern
+  since: Winter 2025
+  image: assets/people/default.png
+  site: #
+
+- name: Hanbee Park
+  role: Undergrad intern
+  since: Winter 2025
+  image: assets/people/default.png
+  site: #
+
+- name: Hyunsoo Lee
+  role: Undergrad intern
+  since: Winter 2025
+  image: assets/people/default.png
+  site: #
+
+- name: Jaeyoung Chun
+  role: Undergrad intern
+  since: Winter 2025
+  image: assets/people/default.png
+  site: #
+
+- name: Jangseop Choi
+  role: Visiting undergrad intern
+  since: Winter 2025
+  image: assets/people/default.png
+  site: #
+
 Alumni:
 - name: Jeongwon Ha
   role: Visiting undergrad intern
