add jangseop's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -98,7 +98,7 @@ Interns:
 - name: Jangseop Choi
   role: Visiting undergrad intern
   since: Winter 2025
-  image: assets/people/default.png
+  image: assets/people/jangseop.jpg
   site: #
 
 Alumni:
