add kyungmin's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -68,7 +68,7 @@ Interns:
 - name: Kyungmin Kim
   role: Undergrad intern
   since: Winter 2024
-  image: assets/people/default.png
+  image: assets/people/kyungmin.jpg
   site: #
 
 - name: Dongwan Roh
