add hyunsoo's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -86,7 +86,7 @@ Interns:
 - name: Hyunsoo Lee
   role: Undergrad intern
   since: Winter 2024
-  image: assets/people/default.png
+  image: assets/people/hyunsoo.jpg
   site: #
 
 - name: Jaeyoung Chun
