add hanbee's pic

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -80,7 +80,7 @@ Interns:
 - name: Hanbee Park
   role: Undergrad intern
   since: Winter 2024
-  image: assets/people/default.png
+  image: assets/people/hanbee.jpg
   site: #
 
 - name: Hyunsoo Lee
