--- a/_data/people.yml
+++ b/_data/people.yml
@@ -77,10 +77,10 @@ Interns:
   image: assets/people/default.png
   site: #
 
-- name: Hanbee Park
+- name: Hanbi Park
   role: Undergrad intern
   since: Winter 2024
-  image: assets/people/hanbee.jpg
+  image: assets/people/hanbi.jpg
   site: #
 
 - name: Hyunsoo Lee
