--- a/_data/people.yml
+++ b/_data/people.yml
@@ -9,7 +9,7 @@ Group Leaders:
   image: assets/people/sangdon.jpg
   site: https://sangdon.github.io/
 
-Students:
+Graduate Students:
 - name: Jongsoo Han
   role: M.S.
   since: Fall 2024
