--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,9 +1,10 @@
-Group Leaders:
+Faculty:
 - name: Seulbae Kim
   role: Assistant Professor
   image: assets/people/seulbae.jpg
   site: https://seulbae-security.github.io
 
+Adjunct Members:
 - name: Sangdon Park
   role: Assistant Professor
   image: assets/people/sangdon.jpg
