--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -18,7 +18,7 @@
   code: "https://github.com/sslab-gatech/ACon2"
 
 - title: "RoboFuzz: Fuzzing Robotic Systems over Robot Operating System (ROS) for Finding Correctness Bugs"
-  author: <b>Seulbae</b> Kim and Taesoo Kim
+  author: <b>Seulbae Kim</b> and Taesoo Kim
   venue: 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering
   abbrev: ESEC/FSE 2022
   year: 2022
