--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -21,6 +21,11 @@ columns:
       href: https://www.postech.ac.kr/
       new_window: true
 
+  - description:
+    ltext:
+    - text: 개인정보처리방침
+      href: https://www.postech.ac.kr/kor/usage-guide/privacy_policy.do
+
 # Small print license statement to add at the bottom of the footer. Can be Markdown
 # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
 license: >
