--- a/_data/people.yml
+++ b/_data/people.yml
@@ -30,6 +30,18 @@ Graduate Students:
   site: https://bxta.kr/
 
 Interns:
+- name: Gunha Go
+  role: Undergrad intern
+  since: Summer 2025
+  image: assets/people/default.png
+  site: #
+
+- name: Woocheol Kim
+  role: Undergrad intern
+  since: Summer 2025
+  image: assets/people/default.png
+  site: #
+
 - name: Jaewon Yu
   role: Undergrad intern
   since: Spring 2025
