--- a/_data/people.yml
+++ b/_data/people.yml
@@ -33,13 +33,13 @@ Interns:
 - name: Gunha Go
   role: Undergrad intern
   since: Summer 2025
-  image: assets/people/default.png
+  image: assets/people/gunha.jpg
   site: #
 
 - name: Woocheol Kim
   role: Undergrad intern
   since: Summer 2025
-  image: assets/people/default.png
+  image: assets/people/woocheol.jpg
   site: #
 
 - name: Jaewon Yu
