add soundboost paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -5,6 +5,7 @@
   year: 2025
   month: June
   loc: Naples, Italy
+  file: "wang:soundboost"
 
 - title: "ACon²: Adaptive Conformal Consensus for Provable Blockchain Oracles"
   author: <b>Sangdon Park</b> and Osbert Bastani and Taesoo Kim
