--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,4 @@
-- title: "SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel (to appear)"
+- title: "SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel"
   author: Haoran Wang and Zheng Yang and Sangdon Park and Yibin Yang and <b>Seulbae Kim</b> and Willian Lunardi and Martin Andreoni and Taesoo kim and Wenke Lee
   venue: 55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks
   abbrev: DSN 2025
