--- a/_data/people.yml
+++ b/_data/people.yml
@@ -48,6 +48,12 @@ Graduate Students:
   site: https://bxta.kr/
 
 Interns:
+- name: Jimin Jung
+  role: Undergrad intern
+  since: Fall 2025
+  image: assets/people/jimin.jpg
+  site: #
+
 - name: Gunha Go
   role: Undergrad intern
   since: Summer 2025
