--- a/_data/people.yml
+++ b/_data/people.yml
@@ -48,6 +48,12 @@ Graduate Students:
   site: https://bxta.kr/
 
 Interns:
+- name: Jaehwan Kim
+  role: Undergrad intern
+  since: Fall 2025
+  image: assets/people/jaehwan.jpg
+  site: https://github.com/carotinoid
+
 - name: Jimin Jung
   role: Undergrad intern
   since: Fall 2025
