update gallery: CSE's night

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,8 @@
+- date: "Nov 27, 2025"
+  description: ""
+  images:
+    - url: "/assets/gallery/20251127-01.jpg"
+
 - date: "Sep 18, 2025"
   description: "A glimpse into the moments at the CompSec Lab."
   images:
