--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,5 +1,5 @@
 - date: "Nov 27, 2025"
-  description: ""
+  description: "After the CSE Byte Night Event."
   images:
     - url: "/assets/gallery/20251127-01.jpg"
 
