--- a/_data/people.yml
+++ b/_data/people.yml
@@ -48,6 +48,12 @@ Graduate Students:
   site: https://bxta.kr/
 
 Interns:
+- name: Jiesung Jung
+  role: Undergrad intern
+  since: Winter 2025
+  image: assets/people/jiesung.jpg
+  site: https://github.com/js-daniel72
+
 - name: Jaehwan Kim
   role: Undergrad intern
   since: Fall 2025
